# 3D_objects_tracker

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
data/: sample_detections.json  sample_scene_tokens.json  sample_token_timestamps.json  sparse4d_results_nusc_sample.json
docker/: run_container.sh  run_sparse4d_mini_trace.sh
nuscenes_runtime/: README.md
nuscenes_runtime/configs/: runtime_example.yaml  sparse4d_detection_to_tracker.yaml  sparse4d_detection_to_tracker_localtest.yaml  sparse4d_detection_to_tracker_mini_trace.yaml
nuscenes_runtime/examples/: custom_adapter.py
nuscenes_runtime/scripts/: build_gt_detection_results.py  build_nuscenes_scene_trace.py  download_nuscenes_mini.sh  fetch_sparse4d_assets.sh  prepare_nuscenes_mini_trace.sh
src/cam3d_tracker/: __init__.py  cli.py  config.py  geometry.py  imm_ekf.py  io_utils.py  math_utils.py  models.py  pipeline.py  tracker.py
src/cam3d_tracker/nuscenes_runtime/: __init__.py  adapters.py  cli.py  config.py  dynamic_import.py  math3d.py  model_runtime.py  nuscenes_provider.py  pipeline.py  sparse4d_bridge.py  sparse4d_cli.py
tests/: test_smoke.py  test_sparse4d_bridge_smoke.py  test_sparse4d_trace_filter.py
